Bug 1207376 - Check whether H264Converter created its decoder successfully. r=jya, a=sylvestre